# SoOpSimulator

./: README.md  index.html  pyproject.toml  pyvista.vtkjs
TLE/: glonass.txt  gps.txt  iridium.txt  skynet.txt  spacebee.txt
data/TLE/: beidou.txt  galileo.txt  muos.txt
demosite/: package-lock.json  package.json  webpack.config.js
demosite/src/: index.js
demosite/src/scenes/: galileo_with_iridium.vtkjs  gps.vtkjs  gps_and_iridium.vtkjs  gps_pair.vtkjs
python/soopsimulator/: constellations.py  export_vtkjs.py
python/tests/: test_constellations.py  test_specular.py
simulator/: Cargo.toml  pyproject.toml
simulator/soopsimulator/: benchmark.py  constellations.py  examples.py  model.py  specular_benchmark.py  test_rust.py
simulator/soopsimulator/python_sim_core/: angle_constraints.py  mask_ocean.py  revisit.py  specular.py  specular_numba.py
simulator/soopsimulator/visualize/: export_vtkjs.py  revisit.py  specular.py
simulator/src/: lib.rs  revisit.rs  specular.rs  vec3.rs
simulator/tests/: test_angle_constraints.py  test_constellations.py  test_specular.py
site/: package-lock.json
site/src/: index.js
soopsimulator/: angle_constraints.py  constellations.py  model.py  specular.py  visualize_specular.py
soopsimulator/propagate/: orbit.py
tests/: test_angle_constraints.py  test_constellations.py  test_specular.py
tests/test_propagate/: test_orbit.py
