[tool.poetry]
name = "soopsimulator"
version = "0.1.0"
description = ""
authors = ["Aidan Molnar <aidanmolnar@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
skyfield = "^1.44"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.971"
black = {version = "^22.8.0", allow-prereleases = true}
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
