[package]
name = "soopsimulator"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_sim_core"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon"]}
num = "0.4.0"
numpy =  { version = "0.17.2"}
pyo3 = { version = "0.17.1", features = ["extension-module"] }
rayon = "1.5.3"

[package.metadata.maturin]
name = "rust_sim_core"
